src/test/ui/half-open-range-patterns/feature-gate-half-open-range-patterns.stderr
error[E0586]: inclusive range with no end
  --> $DIR/feature-gate-half-open-range-patterns.rs:15:13
   |
LL |     if let 5..= = 0 {}
   |             ^^^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error[E0586]: inclusive range with no end
  --> $DIR/feature-gate-half-open-range-patterns.rs:18:13
   |
LL |     if let 5... = 0 {}
   |             ^^^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:7:12
   |
LL |     if let ..=5 = 0 {}
   |            ^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:9:12
   |
LL |     if let ...5 = 0 {}
   |            ^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:11:12
   |
LL |     if let ..5 = 0 {}
   |            ^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:13:12
   |
LL |     if let 5.. = 0 {}
   |            ^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:15:12
   |
LL |     if let 5..= = 0 {}
   |            ^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: half-open range patterns are unstable
  --> $DIR/feature-gate-half-open-range-patterns.rs:18:12
   |
LL |     if let 5... = 0 {}
   |            ^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/67264
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0586, E0658.
For more information about an error, try `rustc --explain E0586`.
